--- a/app/views/doctor/agendar_cita.html.erb
+++ b/app/views/doctor/agendar_cita.html.erb
@@ -89,13 +89,13 @@
 
 						<div class="field" style="margin: 0 0 20px 0;">
 							EPS  <br>
-							<%= text_field_tag 'hora_cita' , "En Desarrollo", disabled: true, size:40 ,style:'margin: 15px 0 0 0'%>
+							<%= text_field_tag 'hora_cita' , "no disponible en el momento", disabled: true, size:40 ,style:'margin: 15px 0 0 0'%>
 						</div>
 						
 
 						<div class="field" style="margin: 0 0 20px 0;">
 							Prepagada <br>
-							<%= text_field_tag 'hora_cita' , "En Desarrollo", disabled: true , size:40 ,style:'margin: 15px 0 0 0'%>
+							<%= text_field_tag 'hora_cita' , "no disponible en el momento", disabled: true , size:40 ,style:'margin: 15px 0 0 0'%>
 						</div>
 
 					</div>
