--- a/app/views/welcome/buscar_odontologo.html.erb
+++ b/app/views/welcome/buscar_odontologo.html.erb
@@ -47,24 +47,27 @@
 		                    <option value="--">Zona</option>
 		                 </select>
 		            </div>
-					<%= submit_tag "Buscar",  :class => 'submit_cita btn_agendar_publico'   %>
+					<%= submit_tag "Mejorar Busqueda",  :class => 'submit_cita btn_agendar_publico'   %>
 			<% end %>
 		</div>
 		<div id="derecha">
 		</div>
 	</div>
+	<br>
+	<br>
+	<!--
 	<div class="separacion">
 		<%= image_tag 'buscar_odontologo/icono_elige_tu_odontologo.png' %>
 	</div>
 	<div class="area_buscar_por_nombre">
-	<!--
+	
 		<div class="buscador_nombre">
 			<input type="text" placeholder="¿Conoces el nombre de tu especialista?" style='width:250px;' id="buscar_odonto">
 			<%= image_tag 'buscar_odontologo/icono_lupa.png' %>
 		</div>
-	-->
+	
 	</div>
-
+	-->
 	<div class="lista_odontologos">
 
 		<% if @odontologos %>
