--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -10,7 +10,7 @@
 			</p>
 		</div>
 		<div class="btn_agendar">
-			<p>agendar</p>
+			<p>pide tu cita aca</p>
 		</div>
 		<%= image_tag "boton_abajo_home.png" ,  :class => 'flecha_abajo_home'%>
 		<div class="formulario_buscar">
@@ -66,7 +66,7 @@
 					
 						
 					<div class="btn_buscar">
-						<%= submit_tag "Pide Una cita" , :class => 'submit'  %>
+						<%= submit_tag "Busca tu Odontólogo" , :class => 'submit'  %>
 					</div>
 
 				<% end %>
@@ -107,7 +107,7 @@
 			<p class="titulo">Más flexibilidad</p>
 			<p class="texto_beneficios">
 				Pide tu cita cualquier día de la semana, a cualquier hora del día, 
-				cerca tu caso o lugar de trabajo.
+				cerca de tu casa o lugar de trabajo.
 			</p>
 		</div>
 	</div>
