--- a/app/views/administrador/index.html.haml
+++ b/app/views/administrador/index.html.haml
@@ -2,37 +2,37 @@
 	%br
 	%h1{ :style => "text-align:center;" }
 		Datos Generales
-	%p
+	%p{class:"informacion_admin"}
 		Odontologos Registrados 
 		= @odontologos.length
-	%p
+	%p{class:"informacion_admin"}
 		Pacientes Registrados 
 		= @pacientes.length
-	%p
+	%p{class:"informacion_admin"}
 		Citas Pedidas
 		= @citas.length
-	%p
+	%p{class:"informacion_admin"}
 		Citas Online
 		= @online
-	%p
+	%p{class:"informacion_admin"}
 		Citas Offline
 		= @offline
-	%p
+	%p{class:"informacion_admin"}
 		Citas que no asistieron
 		= @noasistio
-	%p
+	%p{class:"informacion_admin"}
 		Citas que asistieron
 		= @asistio
-	%p
+	%p{class:"informacion_admin"}
 		Citas confirmadas
 		= @confirmada
-	%p
+	%p{class:"informacion_admin"}
 		Citas por confirmar
 		= @porconfirmar
-	%p
+	%p{class:"informacion_admin"}
 		Citas regendadeas
 		= @reagandada
-	%p
+	%p{class:"informacion_admin"}
 		Citas cancelada
 		= @cancelada
 	%br
