--- a/app/views/administrador/edit_odontologo.html.haml
+++ b/app/views/administrador/edit_odontologo.html.haml
@@ -1,70 +1,106 @@
-.wrapper_perfil_v_odonto{ style:"background:white;" }
+.wrapper_perfil_v_odonto{ style:"background:white;text-align:center;" }
+	%br
+	%h1
+		Editar Odontologo
+
 	= form_for @odontologo ,  :html => { :method => :put, :class => "edit_post", :id => "edit_post_45" } do |f|
 		.field
-			= f.label :nombre
-			%br
+			%p{class:"informacion_admin"}
+				= f.label :nombre
+
 			= f.text_field :nombre  ,:class=> 'registro_campo'
+		%br
 		.field
-			= f.label :apellido
-			%br
+			%p{class:"informacion_admin"}
+				= f.label :apellido
+
 			= f.text_field :apellido  ,:class=> 'registro_campo'
+		%br
 		.field
-			= f.label :correo
-			%br
+			%p{class:"informacion_admin"}
+				= f.label :correo
+			
 			= f.text_field :correo  ,:class=> 'registro_campo'
+		%br
 		.field
-			= f.label :clave
-			%br
+			%p{class:"informacion_admin"}
+				= f.label :clave
+
 			= f.text_field :clave  ,:class=> 'registro_campo'
+		%br
 		.field
-			= f.label :celular
-			%br
+			%p{class:"informacion_admin"}
+				= f.label :celular
+
 			= f.text_field :celular  ,:class=> 'registro_campo'
+		%br
 		.field
-			= label_tag "Estado"
-			%br
+			%p{class:"informacion_admin"}
+				= label_tag "Estado"
+
 			= select_tag("odontologo[autorizado]", options_for_select({ "Activo" => "si", "Innactivo" => "no", "Cancelado" => "cancelado" },@odontologo.autorizado))
+		%br
 		.field
-			= f.label :usuario
-			%br
+			%p{class:"informacion_admin"}
+				= f.label :usuario
+
 			= f.text_field :usuario  ,:class=> 'registro_campo'
+		%br
 		.field
-			= f.label :perfil
-			%br
+			%p{class:"informacion_admin"}
+				= f.label :perfil
+
 			= text_area(:odontologo ,:perfil, cols: 40, rows: 10)
+		%br
 		.field
-			= f.label :image
-			%br
+			%p{class:"informacion_admin"}
+				= f.label :image
+
 			= f.file_field :image
+		%br
 		.field
-			= f.label :facebook
-			%br
-			= f.text_field :facebook
+			%p{class:"informacion_admin"}
+				= f.label :facebook
+
+			= f.text_field :facebook ,:class=> 'registro_campo'
+		%br
 		.field
-			= f.label :twitter
-			%br
-			= f.text_field :twitter
+			%p{class:"informacion_admin"}
+				= f.label :twitter
+
+			= f.text_field :twitter ,:class=> 'registro_campo'
+		%br
 		.field
-			= f.label :linkedin
-			%br
-			= f.text_field :linkedin
+			%p{class:"informacion_admin"}
+				= f.label :linkedin
+
+			= f.text_field :linkedin ,:class=> 'registro_campo'
+		%br
 		.field
-			= f.label :youtube
-			%br
-			= f.text_field :youtube
+			%p{class:"informacion_admin"}
+				= f.label :youtube
+
+			= f.text_field :youtube ,:class=> 'registro_campo'
+		%br
 		.field
-			= f.label :estudio
-			%br
+			%p{class:"informacion_admin"}
+				= f.label :estudio
+
 			= text_area(:odontologo ,:estudio, cols: 40, rows: 10) 
+		%br
 		.field
-			= f.label :web
-			%br
-			= f.text_field :web
-		.field
-			= f.label :genero
-			%br
-			= f.text_field :genero
+			%p{class:"informacion_admin"}
+				= f.label :web
+
+			= f.text_field :web ,:class=> 'registro_campo'
+		%br
+		.field 
+			%p{class:"informacion_admin"}
+				= f.label :genero
+
+			= f.text_field :genero ,:class=> 'registro_campo'
+		%br
 		.actions
 			%br
-			= f.submit "Actualizar"
-
+			= f.submit "Actualizar" 
+	%br
