--- a/app/views/administrador/pacientes.html.haml
+++ b/app/views/administrador/pacientes.html.haml
@@ -17,7 +17,9 @@
 			%th
 				Citas
 			%th
-				
+			
+			%th 
+
 
 		- @pacientes.each do |odontologo|
 
@@ -40,4 +42,6 @@
 				%td
 					%a{:href => "/administrador/pacientes/#{odontologo.id}"}
 						= "Ver"
-					
+				%td 
+					= link_to 'Eliminar', odontologo, method: :delete, data: { confirm: 'Estas Seguro?' }
+	%br
